--- a/views/icheck/includes/nav.ejs
+++ b/views/icheck/includes/nav.ejs
@@ -9,7 +9,7 @@
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="icheck/kids">KIDS <span class="sr-only"></span></a>
+        <a class="nav-link" href="/kids">KIDS <span class="sr-only"></span></a>
         <a class="nav-link" href="/mypage">MYPAGE <span class="sr-only">(current)</span></a>
     </li>
       <% if(locals.user && locals.user.isAdmin == 1) { %>
